kuber/deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb2
  labels:
    app: hello2
spec:
  selector:
    matchLabels:
      app: hello2
      tier: web2
  template:
    metadata:
      labels:
        app: hello2
        tier: web2
    spec:
      containers:
      - name: hello-app2
        image: httpd
        ports:
        - containerPort: 80
