kuber/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: hello
    tier: web
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
