kuber/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
     - port: 80
       targetPort: 80
       nodePort: 30007
