kuber/nodeport2.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: NodePort
  selector:
    app: hello2
    tier: web2
  ports:
     - port: 80
       targetPort: 80
       nodePort: 30009
